1Annee/tob/tps/.svn/pristine/50/506af510a64bdda937cb25aa044809426938d6ce.svn-base
allumettes/Jouer.java:72: error: cannot find symbol
            return new StrategieLente();
                       ^
  symbol:   class StrategieLente
  location: class Jouer
1 error
